[package]
name = "fqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
jni = "0.21.1"
quircs = "0.10.2"

[lib]
crate-type = ["lib", "staticlib", "dylib"]

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "quircs"
harness = false

[[bench]]
name = "fibonacci"
harness = false

